<resources>
    <string name="app_name">Warehouse Database</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>

    <string name="heading_order">Order</string>
    <string name="heading_import">Import</string>
    <string name="heading_export">Export</string>

    <string name="order_number_title">Order Number</string>
    <string name="user_name_title">User Name</string>
    <string name="driver_name_title">Driver Name</string>
    <string name="driver_hkid_title">HKID Number</string>
    <string name="car_plate_title">Car Plate Number</string>
    <string name="carrier_company_title">Carrier Company Name</string>
    <string name="driver_photo_url_title">Driver Photo URL</string>
    <string name="image_view_driver_photo">image_view_driver_photo</string>
    <string name="confirm_button">Confirm</string>
    <string name="authority" translatable="false">com.google.firebase.quickstart.database</string>

    <string name="success">Success</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\
    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>


    <string name="title_dialog_driver_photo">Select driver photo</string>
    <string-array name="driver_photo_dialog_options">
        <item>TAKE PHOTO</item>
        <item>CHOOSE PHOTO</item>
    </string-array>

</resources>
