<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.design.widget.CoordinatorLayout-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.google.firebase.quickstart.database.OrderDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="325dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/order_number_title"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/order_number_title" />

            <TextView
                android:id="@+id/user_name_title"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="User Name" />

            <TextView
                android:id="@+id/carrier_company_name_title"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Carrier Company Name" />

            <EditText
                android:id="@+id/carrier_company_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/driver_name_title"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_name_title" />

            <EditText
                android:id="@+id/driver_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/driver_hkid_title"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/driver_hkid_title" />

            <EditText
                android:id="@+id/driver_hkid_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="4" />

            <TextView
                android:id="@+id/car_plate_title"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_plate_title" />

            <EditText
                android:id="@+id/car_plate_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:id="@+id/time_stamp_view"
                style="@style/details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="Time Stamp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

            <FrameLayout
                android:id="@+id/driver_photo_container"
                style="@style/ProductPhotoContainer"
                android:layout_width="200dp"
                android:onClick="viewDriverPhoto">

                <ImageView
                    android:id="@+id/driver_photo_image_view"
                    style="@style/ProductPhotoImageView"
                    android:layout_width="wrap_content"
                    android:contentDescription="@string/image_view_driver_photo" />

            </FrameLayout>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/confirm_button"
                />

        </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:onClick="showDriverPhotoDialog"
        android:src="@drawable/ic_photo_camera"
        app:fabSize="normal"
        app:layout_anchor="@id/driver_photo_container"
        app:layout_anchorGravity="bottom|right|end"/>

        </LinearLayout>
</ScrollView>
<!--</android.support.design.widget.CoordinatorLayout>-->
